--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
     "dom": "^0.0.3",
     "firebase": "^12.0.0",
     "lucide": "^0.535.0",
